--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body onload="onInit()">
+    <h1>This is my book shop</h1>
     <section>
         <button class="btn" onclick="onAddBook()">add</button>
     </section>
